# toml_cfg_tool

./: .gitignore  README.md  pyproject.toml  removed_imports_diff.txt  setup.cfg
.github/: CONTRIBUTING.md
.github/images/: pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml  remove-unused-imports.yml
toml_cfg_tool/: toml_cfg_tool.py
toml_cfg_tool.egg-info/: PKG-INFO  SOURCES.txt
toml_cfg_tool/src/: contrib.py  creation.py  print_colors.py  updates_cfg.py  updates_toml.py
toml_cfg_tool/src/github_workflows/: CONTRIBUTING.md  dependabot.yml  python-publish.yml  remove-unused-imports.yml
