[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "1.0.0"
description = "A one line description of your project"
readme = "README.md"
requires-python = ">=3.7"
[[project.authors]]
name = "Your Name"
email = "your_email@example.com"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/VinnyVanGogh/toml_cfg_tool.git"

[project.scripts]
project_name = "dir_with_entry_script.entry_script_name:main"

[tool.setuptools.packages.find]
where = [ ".",]
exclude = [ "tests*",]
