[metadata]
name = your_project_name
version = 1.0.0
author = vincevasile
author_email = your_email@example.com
description = A one line description of your project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VinnyVanGogh/toml_cfg_tool.git
license-expression = MIT
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.7

[options.entry_points]
console_scripts = 
	project_name = dir_with_entry_script.entry_script_name:main

